# azure-data-platform

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  setup_directories.sh
.github/workflows/: dev-build.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md
