[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azure-data-platform"
version = "0.1.0"
description = "Production-grade Azure Databricks data platform"
requires-python = ">=3.9"

dependencies = [
    "pyspark>=3.3.0",
    "databricks-sdk>=0.1.0",
    "pandas>=1.3.0",
    "pytest>=7.0.0",
    "black>=22.0.0",
]