[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azure-data-platform"
version = "0.1.0"
description = "Production-grade Azure Databricks data platform"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@gmail.com"}
]
keywords = ["databricks", "azure", "data-engineering", "pyspark"]

dependencies = [
    "pyspark>=3.3.0",
    "databricks-sdk>=0.1.0",
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "pyarrow>=7.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "pylint>=2.13.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "great-expectations>=0.15.0",
    "python-dotenv>=0.19.0",
    "azure-identity>=1.10.0",
    "azure-storage-blob>=12.12.0",
    "azure-keyvault-secrets>=4.4.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "pylint>=2.13.0",
    "isort>=5.10.0",
    "mypy>=0.950",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.6.0",
    "pytest-asyncio>=0.18.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--verbose --cov=projects --cov-report=html --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true